--- a/packages/@aws-cdk/aws-iam/package.json
+++ b/packages/@aws-cdk/aws-iam/package.json
@@ -63,11 +63,13 @@
     "pkglint": "^0.24.1"
   },
   "dependencies": {
-    "@aws-cdk/cdk": "^0.24.1"
+    "@aws-cdk/cdk": "^0.24.1",
+    "@aws-cdk/region-settings": "^0.24.1"
   },
   "homepage": "https://github.com/awslabs/aws-cdk",
   "peerDependencies": {
-    "@aws-cdk/cdk": "^0.24.1"
+    "@aws-cdk/cdk": "^0.24.1",
+    "@aws-cdk/region-settings": "^0.24.1"
   },
   "engines": {
     "node": ">= 8.10.0"
